// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Component should allow expandable cell content: expand cell event 1`] = `
[
  [
    {
      "cellIndex": 0,
      "data": {
        "data": {
          "hello": "world",
        },
      },
      "isExpanded": true,
      "rowIndex": 0,
      "type": "compound",
    },
  ],
]
`;

exports[`Table Component should allow expandable cell content: expandable cell content 1`] = `null`;

exports[`Table Component should allow expandable cell content: expanded cell 1`] = `
<ExpandableRowContent>
  <div
    className="pf-c-table__expandable-row-content"
  >
    dolor sit expandable content
  </div>
</ExpandableRowContent>
`;

exports[`Table Component should allow expandable row content: expand row event 1`] = `
[
  [
    {
      "cellIndex": -1,
      "data": {
        "data": {
          "hello": "world",
        },
      },
      "isExpanded": true,
      "rowIndex": 0,
      "type": "row",
    },
  ],
]
`;

exports[`Table Component should allow expandable row content: expandable row content 1`] = `null`;

exports[`Table Component should allow expandable row content: expanded row 1`] = `
<ExpandableRowContent>
  <div
    className="pf-c-table__expandable-row-content"
  >
    dolor sit expandable content
  </div>
</ExpandableRowContent>
`;

exports[`Table Component should allow selectable row content: select row content 1`] = `
[
  <input
    aria-label="Select all rows"
    checked={false}
    name="check-all"
    onChange={[Function]}
    type="checkbox"
  />,
  <input
    aria-label="Select row 0"
    checked={false}
    name="checkrow0"
    onChange={[Function]}
    type="checkbox"
  />,
  <input
    aria-label="Select row 1"
    checked={false}
    name="checkrow1"
    onChange={[Function]}
    type="checkbox"
  />,
]
`;

exports[`Table Component should allow selectable row content: select row input 1`] = `
[
  [
    {
      "data": {
        "dataLabel": "testing",
      },
      "isSelected": true,
      "rowIndex": 0,
      "type": "row",
    },
  ],
]
`;

exports[`Table Component should allow selectable row content: selected row 1`] = `
[
  <input
    aria-label="Select all rows"
    checked={false}
    name="check-all"
    onChange={[Function]}
    type="checkbox"
  />,
  <input
    aria-label="Select row 0"
    checked={true}
    name="checkrow0"
    onChange={[Function]}
    type="checkbox"
  />,
  <input
    aria-label="Select row 1"
    checked={false}
    name="checkrow1"
    onChange={[Function]}
    type="checkbox"
  />,
]
`;

exports[`Table Component should allow sortable content: sort event 1`] = `
[
  [
    {
      "cellIndex": 0,
      "data": {},
      "direction": "asc",
    },
  ],
  [
    {
      "cellIndex": 0,
      "data": {},
      "direction": "desc",
    },
  ],
]
`;

exports[`Table Component should allow sortable content: sortable content 1`] = `
<Th
  className="quipucords-table__th"
  key="W29iamVjdCBPYmplY3Rd-0"
  sort={
    {
      "columnIndex": 0,
      "onSort": [Function],
      "sortBy": {
        "direction": "asc",
      },
    }
  }
>
  <ThBase
    className="quipucords-table__th"
    innerRef={null}
    sort={
      {
        "columnIndex": 0,
        "onSort": [Function],
        "sortBy": {
          "direction": "asc",
        },
      }
    }
  >
    <th
      aria-sort="none"
      className="quipucords-table__th pf-c-table__sort"
      onMouseEnter={[Function]}
      scope="col"
    >
      <SortColumn
        isSortedBy={false}
        onSort={[Function]}
        sortDirection=""
      >
        <button
          className="pf-c-table__button"
          onClick={[Function]}
          type="button"
        >
          <div
            className="pf-c-table__button-content"
          >
            <TableText>
              <span
                className="pf-c-table__text"
                onMouseEnter={[Function]}
              >
                lorem ipsum
              </span>
            </TableText>
            <span
              className="pf-c-table__sort-indicator"
            >
              <ArrowsAltVIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                  />
                </svg>
              </ArrowsAltVIcon>
            </span>
          </div>
        </button>
      </SortColumn>
    </th>
  </ThBase>
</Th>
`;

exports[`Table Component should allow sortable content: sorted column, asc 1`] = `
<Th
  className="quipucords-table__th"
  key="W29iamVjdCBPYmplY3Rd-0"
  sort={
    {
      "columnIndex": 0,
      "onSort": [Function],
      "sortBy": {
        "direction": "asc",
        "index": 0,
      },
    }
  }
>
  <ThBase
    className="quipucords-table__th"
    innerRef={null}
    sort={
      {
        "columnIndex": 0,
        "onSort": [Function],
        "sortBy": {
          "direction": "asc",
          "index": 0,
        },
      }
    }
  >
    <th
      aria-sort="ascending"
      className="quipucords-table__th pf-c-table__sort pf-m-selected"
      onMouseEnter={[Function]}
      scope="col"
    >
      <SortColumn
        isSortedBy={true}
        onSort={[Function]}
        sortDirection="asc"
      >
        <button
          className="pf-c-table__button"
          onClick={[Function]}
          type="button"
        >
          <div
            className="pf-c-table__button-content"
          >
            <TableText>
              <span
                className="pf-c-table__text"
                onMouseEnter={[Function]}
              >
                lorem ipsum
              </span>
            </TableText>
            <span
              className="pf-c-table__sort-indicator"
            >
              <LongArrowAltUpIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M88 166.059V468c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12V166.059h46.059c21.382 0 32.09-25.851 16.971-40.971l-86.059-86.059c-9.373-9.373-24.569-9.373-33.941 0l-86.059 86.059c-15.119 15.119-4.411 40.971 16.971 40.971H88z"
                  />
                </svg>
              </LongArrowAltUpIcon>
            </span>
          </div>
        </button>
      </SortColumn>
    </th>
  </ThBase>
</Th>
`;

exports[`Table Component should allow sortable content: sorted column, desc 1`] = `
<Th
  className="quipucords-table__th"
  key="W29iamVjdCBPYmplY3Rd-0"
  sort={
    {
      "columnIndex": 0,
      "onSort": [Function],
      "sortBy": {
        "direction": "desc",
        "index": 0,
      },
    }
  }
>
  <ThBase
    className="quipucords-table__th"
    innerRef={null}
    sort={
      {
        "columnIndex": 0,
        "onSort": [Function],
        "sortBy": {
          "direction": "desc",
          "index": 0,
        },
      }
    }
  >
    <th
      aria-sort="descending"
      className="quipucords-table__th pf-c-table__sort pf-m-selected"
      onMouseEnter={[Function]}
      scope="col"
    >
      <SortColumn
        isSortedBy={true}
        onSort={[Function]}
        sortDirection="desc"
      >
        <button
          className="pf-c-table__button"
          onClick={[Function]}
          type="button"
        >
          <div
            className="pf-c-table__button-content"
          >
            <TableText>
              <span
                className="pf-c-table__text"
                onMouseEnter={[Function]}
              >
                lorem ipsum
              </span>
            </TableText>
            <span
              className="pf-c-table__sort-indicator"
            >
              <LongArrowAltDownIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
                  />
                </svg>
              </LongArrowAltDownIcon>
            </span>
          </div>
        </button>
      </SortColumn>
    </th>
  </ThBase>
</Th>
`;

exports[`Table Component should allow variations in table layout: ariaLabel and summary 1`] = `
{
  "aria-label": "lorem ipsum aria-label",
  "borders": false,
  "children": [
    false,
    <Tbody>
      <React.Fragment>
        <Tr
          className="quipucords-table__tr"
        >
          <Td
            className="undefined quipucords-table__td "
          >
            dolor
          </Td>
        </Tr>
      </React.Fragment>
      <React.Fragment>
        <Tr
          className="quipucords-table__tr"
        >
          <Td
            className="undefined quipucords-table__td "
          >
            sit
          </Td>
        </Tr>
      </React.Fragment>
    </Tbody>,
  ],
  "className": "quipucords-table ",
  "isStriped": false,
  "summary": "lorem ipsum summary",
  "variant": "compact",
}
`;

exports[`Table Component should allow variations in table layout: borders and table header removed 1`] = `
<TableComposable
  aria-label={null}
  borders={false}
  className="quipucords-table "
  isStriped={false}
  summary={null}
  variant="compact"
>
  <TableComposableBase
    aria-label={null}
    borders={false}
    className="quipucords-table "
    innerRef={null}
    isStriped={false}
    summary={null}
    variant="compact"
  >
    <table
      aria-label={null}
      className="quipucords-table  pf-c-table pf-m-grid-md pf-m-compact pf-m-no-border-rows"
      data-ouia-component-id="OUIA-Generated-Table-1"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe={true}
      role="grid"
      summary={null}
    >
      <Tbody>
        <TbodyBase
          innerRef={null}
        >
          <tbody
            className=""
            role="rowgroup"
          >
            <Tr
              className="quipucords-table__tr"
              key="W29iamVjdCBPYmplY3Rd-0-row"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-2"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="undefined quipucords-table__td "
                    key="ZG9sb3I=-0-0"
                  >
                    <TdBase
                      className="undefined quipucords-table__td "
                      innerRef={null}
                    >
                      <td
                        className="undefined quipucords-table__td "
                        onMouseEnter={[Function]}
                      >
                        dolor
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
            <Tr
              className="quipucords-table__tr"
              key="W29iamVjdCBPYmplY3Rd-1-row"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-3"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="undefined quipucords-table__td "
                    key="c2l0-1-0"
                  >
                    <TdBase
                      className="undefined quipucords-table__td "
                      innerRef={null}
                    >
                      <td
                        className="undefined quipucords-table__td "
                        onMouseEnter={[Function]}
                      >
                        sit
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
          </tbody>
        </TbodyBase>
      </Tbody>
    </table>
  </TableComposableBase>
</TableComposable>
`;

exports[`Table Component should allow variations in table layout: className and variant 1`] = `
{
  "aria-label": "lorem ipsum aria-label",
  "borders": false,
  "children": [
    false,
    <Tbody>
      <React.Fragment>
        <Tr
          className="quipucords-table__tr"
        >
          <Td
            className="undefined quipucords-table__td "
          >
            dolor
          </Td>
        </Tr>
      </React.Fragment>
      <React.Fragment>
        <Tr
          className="quipucords-table__tr"
        >
          <Td
            className="undefined quipucords-table__td "
          >
            sit
          </Td>
        </Tr>
      </React.Fragment>
    </Tbody>,
  ],
  "className": "quipucords-table lorem-ipsum-class",
  "isStriped": false,
  "summary": "lorem ipsum summary",
  "variant": "compact",
}
`;

exports[`Table Component should allow variations in table layout: generated rows 1`] = `
<TableComposable
  aria-label={null}
  borders={true}
  className="quipucords-table "
  isStriped={false}
  summary={null}
  variant="compact"
>
  <TableComposableBase
    aria-label={null}
    borders={true}
    className="quipucords-table "
    innerRef={null}
    isStriped={false}
    summary={null}
    variant="compact"
  >
    <table
      aria-label={null}
      className="quipucords-table  pf-c-table pf-m-grid-md pf-m-compact"
      data-ouia-component-id="OUIA-Generated-Table-1"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe={true}
      role="grid"
      summary={null}
    >
      <Thead>
        <TheadBase
          innerRef={null}
        >
          <thead
            className=""
          >
            <Tr
              className="quipucords-table__tr"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-1"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Th
                    className="quipucords-table__th"
                    key="bG9yZW0gaXBzdW0=-0"
                  >
                    <ThBase
                      className="quipucords-table__th"
                      innerRef={null}
                    >
                      <th
                        className="quipucords-table__th"
                        onMouseEnter={[Function]}
                        scope="col"
                      >
                        lorem ipsum
                      </th>
                    </ThBase>
                  </Th>
                </tr>
              </TrBase>
            </Tr>
          </thead>
        </TheadBase>
      </Thead>
      <Tbody>
        <TbodyBase
          innerRef={null}
        >
          <tbody
            className=""
            role="rowgroup"
          >
            <Tr
              className="quipucords-table__tr"
              key="W29iamVjdCBPYmplY3Rd-0-row"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-2"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="undefined quipucords-table__td "
                    key="ZG9sb3I=-0-0"
                  >
                    <TdBase
                      className="undefined quipucords-table__td "
                      innerRef={null}
                    >
                      <td
                        className="undefined quipucords-table__td "
                        onMouseEnter={[Function]}
                      >
                        dolor
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
            <Tr
              className="quipucords-table__tr"
              key="W29iamVjdCBPYmplY3Rd-1-row"
            >
              <TrBase
                className="quipucords-table__tr"
                innerRef={null}
              >
                <tr
                  className="quipucords-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-3"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                >
                  <Td
                    className="undefined quipucords-table__td "
                    key="c2l0-1-0"
                  >
                    <TdBase
                      className="undefined quipucords-table__td "
                      innerRef={null}
                    >
                      <td
                        className="undefined quipucords-table__td "
                        onMouseEnter={[Function]}
                      >
                        sit
                      </td>
                    </TdBase>
                  </Td>
                </tr>
              </TrBase>
            </Tr>
          </tbody>
        </TbodyBase>
      </Tbody>
    </table>
  </TableComposableBase>
</TableComposable>
`;

exports[`Table Component should pass child components, nodes when there are no rows: children 1`] = `
<Grid>
  <GridItem
    span={12}
  >
    Loading...
  </GridItem>
</Grid>
`;

exports[`Table Component should render a basic component: basic 1`] = `
<Grid>
  <GridItem
    span={12}
  >
    <TableEmpty
      t={[Function]}
    />
  </GridItem>
</Grid>
`;
